Tue Mar 30 08:35:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_lem_stub.mpc:
          Layout changes.

        * connectors/dds4ccm/tests/NoModule/NoModule_Connector.mpc:
          Resolved linking issues on Windows.

Tue Mar 30 08:22:24 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp:
          Reverted my previous changes. Committed too soon..

Mon Mar 29 13:11:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
          Added booleans to determine which ports were connected.
          This to prevent starting unnecessary DataReaders/DataWriters.

        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp:
          Added booleans to determine which ports were connected.
          This to prevent starting unnecessary DataReaders/DataWriters.
          Added tracing.

Mon Mar 29 12:43:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.h:
        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender_exec.cpp:
        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender_exec.h:
          Reduced number of atomic variables

Mon Mar 29 12:18:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp: